--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 cd C:\xampp\htdocs\ccsfp
 git status
 git add .
-git commit -m ""
+git commit -m "still working on validation"
 git push -u origin main
 
