--- a/readme
+++ b/readme
@@ -1,14 +1,14 @@
 cd C:\xampp\htdocs\ccsfp
 git status
 git add .
-git commit -m "this is ready for deployment"
+git commit -m "ccsfp project finished"
 git push -u origin main
 
 
 
-
-
-
+MySQL database name: u992785675_ccsfp_db
+MySQL username: u992785675_ccsfp_user
+Password: *Q8ut2@W>jp
 
 
 /project-root
